--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
 
 </head>
 <body>
+	
 	<header>
 	<nav >
 		<div class= "barra-header">
-			<a href="#"><img class="img-header" src="http://www.promovesetelagoas.com.br/pagina_entrada/arquivos_img/pagina_entrada/faculdade.png"></a>
+			<a href="index.html"><img class="img-header" src="http://www.promovesetelagoas.com.br/pagina_entrada/arquivos_img/pagina_entrada/faculdade.png"></a>
 
 			<ul>				
-				<li><a class = "a-header">Lista de Curso</a></li>
+				<li><a class = "a-header" href="Lista de Cursos.html">Lista de Curso</a></li>
 				<li><a class = "a-header">Detalhe de Curso</a></li>
 				<li><a class = "a-header">Disciplina</a></li>				
 				<li><a class = "a-header">Noticias</a></li>
