--- a/Lista de Cursos.html
+++ b/Lista de Cursos.html
@@ -18,8 +18,8 @@
         
                     <ul>				
                         <li><a class = "a-header" href="Lista de Cursos.html">Lista de Curso</a></li>
-                        <li><a class = "a-header">Detalhe de Curso</a></li>
-                        <li><a class = "a-header">Disciplina</a></li>				
+                        <li><a class = "a-header" href="detalhe de cursos.html">Detalhe de Cursos</a></li>
+                        <li><a class = "a-header">Disciplinas</a></li>				
                         <li><a class = "a-header">Noticias</a></li>
                                                 
                     </ul>		
@@ -31,7 +31,7 @@
     <ul class="lista2">
         <li>GRADUAÇÃO</li>
         <li>Sistemas de Informação</li>
-        <li>Ciencias da Computação</li>
+        <li>Ciências da Computação</li>
         <li>Engenharia da Computação</li>
         <li>Administraçao</li>
     </ul>
