criação Diciplinas e adição de opção ver diciplinas no lista de cursos

--- a/Lista de Cursos.html
+++ b/Lista de Cursos.html
@@ -19,7 +19,7 @@
                     <ul>				
                         <li><a class = "a-header" href="Lista de Cursos.html">Lista de Curso</a></li>
                         <li><a class = "a-header" href="detalhe de cursos.html">Detalhe de Cursos</a></li>
-                        <li><a class = "a-header">Disciplinas</a></li>				
+                        <li><a class = "a-header" href="diciplinas.html">Disciplinas</a></li>				
                         <li><a class = "a-header">Noticias</a></li>
                                                 
                     </ul>		
@@ -34,7 +34,11 @@
         <li>Ciências da Computação</li>
         <li>Engenharia da Computação</li>
         <li>Administraçao</li>
+        <br>
+        <li><a href="diciplinas.html" style="color: blue; text-decoration: none;">VER LISTA DE DICIPLINAS</a></li>
     </ul>
+
+    
 
 </div>
 
