--- a/detalhe de cursos.html
+++ b/detalhe de cursos.html
@@ -18,7 +18,7 @@
 				<ul>
 					<li><a class="a-header" href="Lista de Cursos.html">Lista de Curso</a></li>
 					<li><a class="a-header" href="detalhe de cursos.html">Detalhe de Cursos</a></li>
-					<li><a class="a-header">Disciplinas</a></li>
+					<li><a class="a-header" href="diciplinas.html">Disciplinas</a></li>
 					<li><a class="a-header">Noticias</a></li>
 
 				</ul>
