--- a/detalhe de cursos.html
+++ b/detalhe de cursos.html
@@ -15,13 +15,13 @@
 			<div class="barra-header">
 				<a href="index.html"><img class="img-header"
 						src="http://www.promovesetelagoas.com.br/pagina_entrada/arquivos_img/pagina_entrada/faculdade.png"></a>
-				<ul>
-					<li><a class="a-header" href="Lista de Cursos.html">Lista de Curso</a></li>
-					<li><a class="a-header" href="detalhe de cursos.html">Detalhe de Cursos</a></li>
-					<li><a class="a-header" href="diciplinas.html">Disciplinas</a></li>
-					<li><a class="a-header">Noticias</a></li>
-
-				</ul>
+						<ul>				
+								<li><a class = "a-header" href="Lista de Cursos.html">Lista de Curso</a></li>
+								<li><a class = "a-header" href="detalhe de cursos.html">Detalhe de Cursos</a></li>
+								<li><a class = "a-header" href="diciplinas.html">Disciplinas</a></li>				
+								<li><a class = "a-header" href="noticias.html">Noticias</a></li>
+														
+							</ul>	
 			</div>
 		</nav>
 	</header>
